fixed system theme thing that white text invisible on the orange text boxes

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -15,7 +15,7 @@
   --popover: oklch(1 0 0);
   --popover-foreground: oklch(0.145 0 0);
   --primary: oklch(67.712% 0.21616 38.608);
-  --primary-foreground: oklch(67.712% 0.21616 38.608);
+  --primary-foreground: oklch(0.985 0 0);
   --secondary: oklch(0.97 0 0);
   --secondary-foreground: oklch(0.205 0 0);
   --muted: oklch(0.97 0 0);
